[package]
name = "alice-animation"
version = "0.1.0"
edition = "2021"
authors = ["Moroya Sakamoto"]
description = "ALICE-Animation: Anime-focused SDF direction engine"
license = "LicenseRef-Proprietary"
publish = false

[lib]
name = "alice_animation"

[features]
default = []
view = ["dep:alice-view"]
voice = ["dep:alice-voice"]
streaming = ["dep:libasp"]
physics = ["dep:alice-physics"]

[dependencies]
alice-sdf = { path = "../ALICE-SDF", default-features = false }
glam = { version = "0.29", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
bincode = "1"
crc32fast = "1"

# Optional
alice-view = { path = "../ALICE-View", optional = true, default-features = false }
alice-voice = { path = "../ALICE-Voice", optional = true, default-features = false }
libasp = { path = "../ALICE-Streaming-Protocol", optional = true, default-features = false }
alice-physics = { path = "../ALICE-Physics", optional = true, default-features = false }

[dev-dependencies]
alice-sdf = { path = "../ALICE-SDF", default-features = false }

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
strip = true
panic = "abort"
