[package]
name = "alice-animation"
version = "0.1.0"
edition = "2021"
authors = ["Moroya Sakamoto"]
description = "ALICE-Animation: Anime-focused SDF direction engine"
license = "LicenseRef-Proprietary"
publish = false

[lib]
name = "alice_animation"

[features]
default = []
view = ["dep:alice-view"]
voice = ["dep:alice-voice"]
streaming = ["dep:libasp"]
physics = ["dep:alice-physics"]
codec = ["dep:alice-codec"]
cdn = ["dep:alice-cdn"]
cache = ["dep:alice-cache"]
db = ["dep:alice-db"]
browser = ["dep:alice-browser"]
ml = ["dep:alice-ml"]

[dependencies]
alice-sdf = { path = "../ALICE-SDF", default-features = false }
glam = { version = "0.29", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
bincode = "1"
crc32fast = "1"

# Optional
alice-view = { path = "../ALICE-View", optional = true, default-features = false }
alice-voice = { path = "../ALICE-Voice", optional = true, default-features = false }
libasp = { path = "../ALICE-Streaming-Protocol", optional = true, default-features = false }
alice-physics = { path = "../ALICE-Physics", optional = true, default-features = false }
alice-codec = { path = "../ALICE-Codec", optional = true, default-features = false }
alice-cdn = { path = "../ALICE-CDN", optional = true, default-features = false }
alice-cache = { path = "../ALICE-Cache", optional = true, default-features = false }
alice-db = { path = "../ALICE-DB", optional = true, default-features = false }
alice-browser = { path = "../ALICE-Browser", optional = true, default-features = false }
alice-ml = { path = "../ALICE-ML", optional = true, default-features = false }

[dev-dependencies]
alice-sdf = { path = "../ALICE-SDF", default-features = false }

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
strip = true
panic = "abort"
